Added background and styling

--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+html{
+  background: url(assets/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body{
-    background-color: #191919;
     text-align: center;
     margin: 0;
     
@@ -18,6 +25,11 @@ body{
   resize: both;
   overflow: auto;
   padding-bottom: 5px;
+}
+
+#content{
+  border: 5px solid #FFFFFF;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .game img{
